// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should match snapshot 1`] = `
<div
  className="App"
>
  <Connect(Header)
    menuShown={false}
    toggleMenu={[Function]}
  />
  <Route
    component={[Function]}
    exact={true}
    path="/"
  />
  <Route
    component={[Function]}
    exact={true}
    path="/about"
  />
  <Route
    component={
      Object {
        "$$typeof": Symbol(react.memo),
        "WrappedComponent": [Function],
        "compare": null,
        "displayName": "Connect(HaikusContainer)",
        "type": [Function],
      }
    }
    exact={true}
    path="/haikus"
  />
  <Route
    component={
      Object {
        "$$typeof": Symbol(react.memo),
        "WrappedComponent": [Function],
        "compare": null,
        "displayName": "Connect(HaikuDetails)",
        "type": [Function],
      }
    }
    exact={true}
    path="/haiku/:id"
  />
</div>
`;

exports[`App should match snapshot if menuShown is true 1`] = `
<div
  className="App"
>
  <Menu
    toggleMenu={[Function]}
  />
  <Connect(Header)
    menuShown={true}
    toggleMenu={[Function]}
  />
  <Route
    component={[Function]}
    exact={true}
    path="/"
  />
  <Route
    component={[Function]}
    exact={true}
    path="/about"
  />
  <Route
    component={
      Object {
        "$$typeof": Symbol(react.memo),
        "WrappedComponent": [Function],
        "compare": null,
        "displayName": "Connect(HaikusContainer)",
        "type": [Function],
      }
    }
    exact={true}
    path="/haikus"
  />
  <Route
    component={
      Object {
        "$$typeof": Symbol(react.memo),
        "WrappedComponent": [Function],
        "compare": null,
        "displayName": "Connect(HaikuDetails)",
        "type": [Function],
      }
    }
    exact={true}
    path="/haiku/:id"
  />
</div>
`;
